# pFacesExamples

./: .gitignore  README.md
0_HelloWorld/: CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  example.cfg  pFacesExample.filters  pFacesExample.sln  pFacesExample.vcxproj  run.sh
0_HelloWorld/kernel/: example.cpp  example.h
0_HelloWorld/kernel-driver/: Makefile  example.cpp  example.h
0_HelloWorld/kernel-pack/: config.defaults  config.template  example.cl  example.cpu.cl  example.driver  example.gpu.cl  example.gpu.cl.render  example.hwa.cl  example.mem  example.mem.exampleKernelFunction.render_defaults  example.mem.exampleKernelFunction.render_schema
